The Grid unit is no longer templatized.  It was an interesting experiment, but seems unnecessary.  It probably also lead to code bloat, added much more typing, and opened the door to having more than one Grid instance in existence and in use, which would be a logical error.

--- a/sites/bebop/Makefile_runtime_cpp
+++ b/sites/bebop/Makefile_runtime_cpp
@@ -14,6 +14,7 @@ GTESTDIR     = $(HOME)/local/gcc_7.1.0/googletest
 
 # Common files
 CXX_HDRS   = \
+    $(INCDIR)/Grid.h \
     $(INCDIR)/Tile.h \
     $(INCDIR)/runtimeTask.h \
     $(INCDIR)/ThreadTeamModes.h \
@@ -33,6 +34,7 @@ CXX_HDRS   = \
     $(TESTDIR)/Flash.h \
     $(TESTDIR)/constants.h
 SRCS       = \
+    $(SRCDIR)/Grid.cpp \
     $(SRCDIR)/Tile.cpp \
     $(SRCDIR)/OrchestrationRuntime.cpp \
     $(TESTBASEDIR)/initTile_cpu.cpp \
