--- a/sites/bebop/Makefile_gatherData_F2003
+++ b/sites/bebop/Makefile_gatherData_F2003
@@ -28,6 +28,7 @@ CXX_HDRS   = \
     $(TESTDIR)/constants.h
 CXX_SRCS       = \
     $(SRCDIR)/Tile.cpp \
+    $(SRCDIR)/Grid.cpp \
     $(SRCDIR)/OrchestrationRuntime.cpp \
     $(SRCDIR)/tile_fi.cpp \
     $(SRCDIR)/grid_fi.cpp \
