--- a/sites/bebop/Makefile_gatherData_cpp
+++ b/sites/bebop/Makefile_gatherData_cpp
@@ -13,6 +13,7 @@ AMREXDIR     = $(HOME)/local/gcc_7.1.0/amrex_2d
 
 # Common files
 CXX_HDRS   = \
+    $(INCDIR)/Grid.h \
     $(INCDIR)/Tile.h \
     $(INCDIR)/runtimeTask.h \
     $(INCDIR)/ThreadTeamModes.h \
@@ -32,6 +33,7 @@ CXX_HDRS   = \
     $(TESTDIR)/Flash.h \
     $(TESTDIR)/constants.h
 SRCS       = \
+    $(SRCDIR)/Grid.cpp \
     $(SRCDIR)/Tile.cpp \
     $(SRCDIR)/OrchestrationRuntime.cpp \
     $(TESTBASEDIR)/initTile_cpu.cpp \
