--- a/sites/hello/Makefile_runtime_cpp
+++ b/sites/hello/Makefile_runtime_cpp
@@ -12,6 +12,7 @@ GTESTDIR     = /usr/local/spack/opt/spack/darwin-highsierra-x86_64/gcc-6.5.0/goo
 
 # Common files
 CXX_HDRS   = \
+    $(INCDIR)/Grid.h \
     $(INCDIR)/Tile.h \
     $(INCDIR)/runtimeTask.h \
     $(INCDIR)/ThreadTeamModes.h \
@@ -31,6 +32,7 @@ CXX_HDRS   = \
     $(TESTDIR)/Flash.h \
     $(TESTDIR)/constants.h
 SRCS       = \
+    $(SRCDIR)/Grid.cpp \
     $(SRCDIR)/Tile.cpp \
     $(SRCDIR)/OrchestrationRuntime.cpp \
     $(TESTBASEDIR)/initTile_cpu.cpp \
