--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ sites/*/gather_data_F2003.x
 sites/*/gather_data_F2003_*_*.x
 sites/*/binaries
 sites/summit/gatherDataCpp.*
+sites/summit/testRuntimeCpp.*
+sites/summit/testThreadTeam.*
 sites/bebop/build/build_*.log
 sites/bebop/test_threadteam_cpp_bebop.[oe]*
 sites/bebop/test_runtime_cpp_bebop.[oe]*
