--- a/sites/summit/Makefile_gatherData_cpp
+++ b/sites/summit/Makefile_gatherData_cpp
@@ -2,17 +2,19 @@ SHELL=/bin/sh
 
 # TODO: Redo this with more care.  Make certain that template .h/.cpp dependencies are correct
 
-BASE     = gather_data_cpp
-MAKEFILE = Makefile_gatherData_cpp
-BASEDIR  = ../..
-INCDIR   = $(BASEDIR)/includes
-SRCDIR   = $(BASEDIR)/src
-TESTDIR  = $(BASEDIR)/test
-AMREXDIR = $(HOME)/local/AMReX/summit_2d_pgi
+BASE         = gather_data_cpp
+MAKEFILE     = Makefile_gatherData_cpp
+BASEDIR      = ../..
+INCDIR       = $(BASEDIR)/includes
+SRCDIR       = $(BASEDIR)/src
+TESTBASEDIR  = $(BASEDIR)/test/Base
+TESTDIR      = $(BASEDIR)/test/GatherDataCpp
+AMREXDIR     = $(HOME)/local/gcc_9.1.0/AMReX_2d
 
 # Common files
 CXX_HDRS   = \
     $(INCDIR)/Tile.h \
+    $(INCDIR)/Grid.h \
     $(INCDIR)/runtimeTask.h \
     $(INCDIR)/ThreadTeamModes.h \
     $(INCDIR)/ThreadTeam.h \
@@ -32,24 +34,23 @@ CXX_HDRS   = \
     $(TESTDIR)/scaleEnergy_cpu.h
 SRCS       = \
     $(SRCDIR)/Tile.cpp \
+    $(SRCDIR)/Grid.cpp \
     $(SRCDIR)/OrchestrationRuntime.cpp \
-    $(TESTDIR)/initTile_cpu.cpp \
-    $(TESTDIR)/Analysis.cpp \
-    $(TESTDIR)/computeLaplacianDensity_cpu.cpp \
-    $(TESTDIR)/computeLaplacianEnergy_cpu.cpp \
-    $(TESTDIR)/scaleEnergy_cpu.cpp \
+    $(TESTBASEDIR)/initTile_cpu.cpp \
+    $(TESTBASEDIR)/Analysis.cpp \
+    $(TESTBASEDIR)/computeLaplacianDensity_cpu.cpp \
+    $(TESTBASEDIR)/computeLaplacianEnergy_cpu.cpp \
+    $(TESTBASEDIR)/scaleEnergy_cpu.cpp \
     $(TESTDIR)/gatherData.cpp 
 
 OBJS      = $(addsuffix .o, $(basename $(SRCS)))
 COMMAND   =  $(BASE).x
 
 CXX       = mpic++
-CXXFLAGS  = -g -O0 -std=c++11 -I$(INCDIR) -I$(TESTDIR) -I$(AMREXDIR)/include
+CXXFLAGS  = -g -O0 -std=c++11 -I$(INCDIR) -I$(TESTBASEDIR) -I$(TESTDIR) -I$(AMREXDIR)/include
 CXXWARNS  =
 
-#LIBS      = -lstdc++ -lamrex -pgf90libs
-#LIBS      = -lstdc++ -lamrex -lpgf90 -lpgf902 -lpgf90rtl -lpgf90_rpm1
-LIBS      = -lstdc++
+LIBS      = -lpthread -lstdc++ -lgfortran -lamrex
 LDFLAGS   = -L$(AMREXDIR)/lib
 
 all:    $(COMMAND)
@@ -73,23 +74,27 @@ $(COMMAND): $(OBJS) $(MAKEFILE)
 	@printf "constexpr char BUILD_DATETIME[] = \"" >> $(TESTDIR)/buildInfo.h
 	@printf "%s\";\n" `date +"%Y-%m-%dT%H:%M:%S%z"` >> $(TESTDIR)/buildInfo.h
 
-	@printf "constexpr char HOSTNAME[] = \"Summit\";\n" >> $(TESTDIR)/buildInfo.h
-	@printf "constexpr char MACHINE_INFO[] = \"UNKNOWN\";\n" >> $(TESTDIR)/buildInfo.h
+	@printf "constexpr char HOSTNAME[] = \"" >> $(TESTDIR)/buildInfo.h
+	@printf "%s\";\n" `hostname` >> $(TESTDIR)/buildInfo.h
+
+	@printf "constexpr char MACHINE_INFO[] = \"" >> $(TESTDIR)/buildInfo.h
+	@printf "%s\";\n" `$(CXX) -dumpmachine` >> $(TESTDIR)/buildInfo.h
 
 	@printf "constexpr char CXX_COMPILER[] = \"" >> $(TESTDIR)/buildInfo.h
 	@printf "%s\";\n" $(CXX) >> $(TESTDIR)/buildInfo.h
 
-	@printf "constexpr char CXX_COMPILER_VERSION[] = \"UNKNOWN\";\n" >> $(TESTDIR)/buildInfo.h
+	@printf "constexpr char CXX_COMPILER_VERSION[] = \"" >> $(TESTDIR)/buildInfo.h
+	@printf "%s\";\n" `$(CXX) -dumpversion` >> $(TESTDIR)/buildInfo.h
 
 	$(CXX) -c $(CXXFLAGS) $(CXXWARNS) -o $@ $<
 
 clean:
-	/bin/rm -f $(TESTDIR)/buildInfo.h
-	/bin/rm -f $(BASEDIR)/Test*.log
+	/bin/rm -f $(COMMAND)
+	/bin/rm -f *.mod
 	/bin/rm -f $(SRCDIR)/*.o
-	/bin/rm -f $(TESTDIR)/*.o
 	/bin/rm -f $(SRCDIR)/*.mod
-	/bin/rm -f $(BASEDIR)/*.mod
+	/bin/rm -f $(TESTBASEDIR)/*.o
+	/bin/rm -f $(TESTDIR)/buildInfo.h
+	/bin/rm -f $(TESTDIR)/*.o
 	/bin/rm -f $(TESTDIR)/*.mod
-	/bin/rm -f $(BASEDIR)/test_*.x 
 
