Added a new manual test on hello that allows me to check that the correct number of threads are in existence.  This includes determining empirically where AMReX is using threads.  The test necessitated the inclusion of another thread team configuration in the runtime.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ sites/*/gather_data_cpp_*_*.x
 sites/*/gather_data_F2003.x
 sites/*/gather_data_F2003_*_*.x
 sites/*/binaries
+sites/hello/manual_cpp.x
 sites/summit/gatherDataCpp.*
 sites/summit/testRuntimeCpp.*
 sites/summit/testThreadTeam.*
