--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ sites/*/gather_data_F2003.x
 sites/*/gather_data_F2003_*_*.x
 sites/*/binaries
 sites/hello/manual_cpp.x
+sites/hello/*.dat
 sites/summit/gatherDataCpp.*
 sites/summit/testRuntimeCpp.*
 sites/summit/testThreadTeam.*
