--- a/sites/hello/Makefile_gatherData_F2003
+++ b/sites/hello/Makefile_gatherData_F2003
@@ -14,6 +14,7 @@ CXX_HDRS   = \
     $(INCDIR)/Tile.h \
     $(INCDIR)/runtimeTask.h \
     $(INCDIR)/ThreadTeamModes.h \
+    $(INCDIR)/ThreadTeamDataType.h \
     $(INCDIR)/ThreadTeam.h \
     $(INCDIR)/ThreadTeamState.h \
     $(INCDIR)/ThreadTeamIdle.h \
@@ -21,6 +22,8 @@ CXX_HDRS   = \
     $(INCDIR)/ThreadTeamRunningOpen.h \
     $(INCDIR)/ThreadTeamRunningClosed.h \
     $(INCDIR)/ThreadTeamRunningNoMoreWork.h \
+    $(INCDIR)/ActionBundle.h \
+    $(INCDIR)/RuntimeAction.h \
     $(INCDIR)/OrchestrationRuntime.h \
     $(TESTDIR)/constants.h
 CXX_SRCS       = \
