--- a/sites/hello/Makefile_runtime_cpp
+++ b/sites/hello/Makefile_runtime_cpp
@@ -16,6 +16,7 @@ CXX_HDRS   = \
     $(INCDIR)/Tile.h \
     $(INCDIR)/runtimeTask.h \
     $(INCDIR)/ThreadTeamModes.h \
+    $(INCDIR)/ThreadTeamDataType.h \
     $(INCDIR)/ThreadTeam.h \
     $(INCDIR)/ThreadTeamState.h \
     $(INCDIR)/ThreadTeamIdle.h \
@@ -23,6 +24,8 @@ CXX_HDRS   = \
     $(INCDIR)/ThreadTeamRunningOpen.h \
     $(INCDIR)/ThreadTeamRunningClosed.h \
     $(INCDIR)/ThreadTeamRunningNoMoreWork.h \
+    $(INCDIR)/ActionBundle.h \
+    $(INCDIR)/RuntimeAction.h \
     $(INCDIR)/OrchestrationRuntime.h \
     $(TESTBASEDIR)/initTile_cpu.h \
     $(TESTBASEDIR)/computeLaplacianDensity_cpu.h \
