--- a/sites/hello/Makefile_gatherData_cpp
+++ b/sites/hello/Makefile_gatherData_cpp
@@ -15,6 +15,7 @@ AMREXDIR     = $(HOME)/local/gcc_6.5.0/AMReX_2D
 CXX_HDRS   = \
     $(INCDIR)/Grid.h \
     $(INCDIR)/Tile.h \
+    $(INCDIR)/DataPacket.h \
     $(INCDIR)/runtimeTask.h \
     $(INCDIR)/ThreadTeamModes.h \
     $(INCDIR)/ThreadTeamDataType.h \
@@ -28,22 +29,22 @@ CXX_HDRS   = \
     $(INCDIR)/ActionBundle.h \
     $(INCDIR)/RuntimeAction.h \
     $(INCDIR)/OrchestrationRuntime.h \
-    $(TESTBASEDIR)/initTile_cpu.h \
+    $(TESTBASEDIR)/setInitialConditions_block.h \
+    $(TESTBASEDIR)/computeLaplacianDensity_block.h \
+    $(TESTBASEDIR)/computeLaplacianEnergy_block.h \
+    $(TESTBASEDIR)/scaleEnergy_block.h \
     $(TESTBASEDIR)/Analysis.h \
-    $(TESTBASEDIR)/computeLaplacianDensity_cpu.h \
-    $(TESTBASEDIR)/computeLaplacianEnergy_cpu.h \
-    $(TESTBASEDIR)/scaleEnergy_cpu.h \
     $(TESTDIR)/Flash.h \
     $(TESTDIR)/constants.h
 SRCS       = \
     $(SRCDIR)/Grid.cpp \
     $(SRCDIR)/Tile.cpp \
     $(SRCDIR)/OrchestrationRuntime.cpp \
-    $(TESTBASEDIR)/initTile_cpu.cpp \
+    $(TESTBASEDIR)/setInitialConditions_block.cpp \
+    $(TESTBASEDIR)/computeLaplacianDensity_block.cpp \
+    $(TESTBASEDIR)/computeLaplacianEnergy_block.cpp \
+    $(TESTBASEDIR)/scaleEnergy_block.cpp \
     $(TESTBASEDIR)/Analysis.cpp \
-    $(TESTBASEDIR)/computeLaplacianDensity_cpu.cpp \
-    $(TESTBASEDIR)/computeLaplacianEnergy_cpu.cpp \
-    $(TESTBASEDIR)/scaleEnergy_cpu.cpp \
     $(TESTDIR)/gatherData.cpp 
 
 OBJS      = $(addsuffix .o, $(basename $(SRCS)))
