WIP: Added extremely rough draft of notebook that I have been developing to study behavior of ThreadTeams and the runtime.

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,7 @@ test/Flash.h
 test/constants.h
 test/*/*.o
 test/*.mod
+studies/Summit_2020-04-15/gatherDataCpp_*
+studies/Summit_2020-04-15/gatherDataF2003_*
+studies/Summit_2020-04-15/testRuntimeCpp_*
+studies/Summit_2020-04-15/testThreadTeam_*
