WIP:  In preparation for integrating data-packet-based thread teams in runtime, made the TASK_FCN interface free from data type.  This is not necessarily a final decision, but rather a reasonable step toward getting the functionality in place.
No regressions in test results or in performance.

--- a/sites/summit/Makefile_gatherData_F2003
+++ b/sites/summit/Makefile_gatherData_F2003
@@ -14,6 +14,7 @@ AMREXDIR = $(HOME)/local/gcc_9.1.0/AMReX_2d
 CXX_HDRS   = \
     $(INCDIR)/Tile.h \
     $(INCDIR)/Grid.h \
+    $(INCDIR)/DataPacket.h \
     $(INCDIR)/runtimeTask.h \
     $(INCDIR)/ThreadTeamModes.h \
     $(INCDIR)/ThreadTeam.h \
