--- a/sites/summit/Makefile_threadteam_cpp
+++ b/sites/summit/Makefile_threadteam_cpp
@@ -15,6 +15,7 @@ GTESTDIR     = $(HOME)/local/gcc_9.1.0/googletest
 CXX_HDRS   = \
     $(INCDIR)/runtimeTask.h \
     $(INCDIR)/ThreadTeamModes.h \
+    $(INCDIR)/ThreadTeamBase.h \
     $(INCDIR)/ThreadTeam.h \
     $(INCDIR)/ThreadTeamState.h \
     $(INCDIR)/ThreadTeamIdle.h \
@@ -23,7 +24,8 @@ CXX_HDRS   = \
     $(INCDIR)/ThreadTeamRunningClosed.h \
     $(INCDIR)/ThreadTeamRunningNoMoreWork.h \
     $(TESTBASEDIR)/estimateTimerResolution.h \
-    $(TESTDIR)/threadTeamTest.h 
+    $(TESTDIR)/threadTeamTest.h \
+    $(TESTDIR)/testThreadRoutines.h
 SRCS       = \
     $(TESTBASEDIR)/estimateTimerResolution.cpp \
     $(TESTDIR)/testThreadRoutines.cpp \
