(Issue #14) Cleaned up the naming used in the ThreadTeam to match the current definitions and conceptual understanding.  This included at least one file name and adjusting the name of the runtime after it was included in the orchestration namespace.
Had to update many Makefiles and tests as part of this.

Tested on hello with no regressions.

--- a/sites/Thomass-MBP/Makefile_grid_cpp
+++ b/sites/Thomass-MBP/Makefile_grid_cpp
@@ -19,7 +19,7 @@ CXX_HDRS   = \
     $(INCDIR)/Grid.h \
     $(INCDIR)/Tile.h \
     $(INCDIR)/DataPacket.h \
-    $(INCDIR)/runtimeTask.h \
+    $(INCDIR)/actionRoutine.h \
     $(INCDIR)/ThreadTeamModes.h \
     $(INCDIR)/ThreadTeamDataType.h \
     $(INCDIR)/ThreadTeamBase.h \
