--- a/sites/bebop/Makefile_threadteam_cpp
+++ b/sites/bebop/Makefile_threadteam_cpp
@@ -12,7 +12,7 @@ GTESTDIR = $(HOME)/local/gcc_7.1.0/googletest
 
 # Common files
 CXX_HDRS   = \
-    $(INCDIR)/runtimeTask.h \
+    $(INCDIR)/actionRoutine.h \
     $(INCDIR)/ThreadTeamModes.h \
     $(INCDIR)/ThreadTeam.h \
     $(INCDIR)/ThreadTeamState.h \
