--- a/sites/summit/Makefile_threadteam_cpp
+++ b/sites/summit/Makefile_threadteam_cpp
@@ -13,7 +13,7 @@ GTESTDIR     = $(HOME)/local/gcc_9.1.0/googletest
 
 # Common files
 CXX_HDRS   = \
-    $(INCDIR)/runtimeTask.h \
+    $(INCDIR)/actionRoutine.h \
     $(INCDIR)/ThreadTeamModes.h \
     $(INCDIR)/ThreadTeamBase.h \
     $(INCDIR)/ThreadTeam.h \
