(Issue #14) Got tests working again on Summit after recent changes.  All tests build and run.  I didn't check the scaling/timing of the gather data results, but all seems to be on track.

--- a/sites/summit/Makefile_gatherData_F2003
+++ b/sites/summit/Makefile_gatherData_F2003
@@ -13,6 +13,8 @@ AMREXDIR = $(HOME)/local/gcc_9.1.0/AMReX_2d
 # Common files
 CXX_HDRS   = \
     $(INCDIR)/Tile.h \
+    $(INCDIR)/Grid_IntVect.h \
+    $(INCDIR)/Grid_RealVect.h \
     $(INCDIR)/Grid.h \
     $(INCDIR)/DataPacket.h \
     $(INCDIR)/actionRoutine.h \
@@ -33,6 +35,8 @@ CXX_HDRS   = \
     $(TESTDIR)/constants.h
 CXX_SRCS       = \
     $(SRCDIR)/Tile.cpp \
+    $(SRCDIR)/Grid_IntVect.cpp \
+    $(SRCDIR)/Grid_RealVect.cpp \
     $(SRCDIR)/Grid.cpp \
     $(SRCDIR)/OrchestrationRuntime.cpp \
     $(SRCDIR)/tile_fi.cpp \
