--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ gatherDataF2003_*_*_*_*_*_*.dat
 docs/OrchestrationSystem.log
 docs/OrchestrationSystem.aux
 docs/OrchestrationSystem.pdf
+docs/data\ types.pdf
 sites/*/test_threadteam_cpp.x
 sites/*/test_runtime_int_cpp.x
 sites/*/test_runtime_tile_cpp.x
